--- a/src/styles/404.css
+++ b/src/styles/404.css
@@ -39,6 +39,16 @@
     90%,100% { -webkit-opacity: 1; opacity: 1; -webkit-transform: scale(1.2); transform: scale(1.2); border-radius: 999999px;}
 }
 
+.bg-purple {
+    /* background: url(../img/bg_purple.png); */
+    background-repeat: repeat-x;
+    background-size: cover;
+    background-position: left top;
+    height: 100%;
+    overflow: hidden;
+    height: 100vh;
+}
+
 .spin-earth-on-hover{
     
     transition: ease 200s !important;
@@ -107,7 +117,7 @@
     transform: translateX(-50px);
     top: 75%;
     pointer-events: none;
-    animation: rocket-movement 200s linear infinite both running;
+    animation: rocket-movement 20s linear infinite both running;
 }
 
 .object_earth{
@@ -115,17 +125,17 @@
     top: 20%;
     left: 15%;
     z-index: 90;
-/*    animation: spin-earth 100s infinite linear both;*/
+   animation: spin-earth 30s infinite linear both;
 }
 
 .object_moon{
     position: absolute;
     top: 12%;
     left: 25%;
-/*
-    transform: rotate(0deg);
-    transition: transform ease-in 99999999999s;
-*/
+
+    transform: rotate(360deg);
+    transition: transform ease-in 5s infiite;
+
 }
 
 .earth-moon{
@@ -133,16 +143,16 @@
 }
 
 .object_astronaut{
-    animation: rotate-astronaut 200s infinite linear both alternate;
+    animation: rotate-astronaut 30s infinite linear both alternate;
 }
 
 .box_astronaut{
     z-index: 110 !important;
     position: absolute;
-    top: 60%;
-    right: 20%;
+    top: 70%;
+    right: 40%;
     will-change: transform;
-    animation: move-astronaut 50s infinite linear both alternate;
+    animation: move-astronaut 20s infinite linear both alternate;
 }
 
 .image-404{
