remove login button and added styles to  404

--- a/src/styles/404.css
+++ b/src/styles/404.css
@@ -220,8 +220,18 @@
     .box_astronaut{
         top: 70%;
     }
+
+    .object_earth {
+        top: 10%;
+    }
+
+    .object_moon { 
+        left: 40%
+    }
     
     .central-body{
-        padding-top: 25%;
+        padding-top: 50%;
     }
+
+
 }
