--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,6 +6,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import  url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
 html {
   font-family: "Lora", serif, -apple-system, system-ui, BlinkMacSystemFont,
